# lumenfin-agent

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py  start_api.py  start_worker.py  test_result.txt
docs/: ENCODING.md  HITL_CLARIFICATION.md  INPUT_GUARDRAIL.md  MCP.md  RAG_MILVUS.md  README_zh.md  architecture_decisions.md  evaluation_strategy.md
mcp_layer/: README.md  _bootstrap.py  cursor-mcp.example.json
scripts/: build_stress_fixtures.py  check_deepseek.py  check_market_data.py  create_sample_pdf.py  e2e_verify_gates.py  ensure_utf8.ps1  evaluate_agent_runs.py  export_finrun.py  rebrand_project.py  run_golden_eval.py  run_linked_coverage.py  run_live_multi_stability.py  run_mcp_agent_demo.py  run_mcp_tools_demo.py  run_pdf_demo.py  run_portfolio_demo.py  run_rag_eval.py  run_stress_coverage.py  run_tests.py
static/: index.html
tests/: test_artifacts_and_repair.py  test_checkpoint_persistence.py  test_data_ingest.py  test_document_ingest.py  test_evaluation.py  test_failure_injection.py  test_fallback_llm.py  test_finrun_export.py  test_fundamentals_gate.py  test_graph_routing.py  test_hitl.py  test_input_guardrail.py  test_live_fundamentals.py  test_market_data.py  test_mcp_adapters.py  test_mcp_doc_search.py  test_mcp_quant_bridge.py  test_observability.py  test_parallel.py  test_planning.py  test_prefer_documents_and_milvus.py  test_production_mindset_guards.py  test_rag.py  test_rag_metrics.py  test_reporting_data_sources.py  test_symbols.py  (+2 more)
(+77 files in other folders)
